--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,5 +1,5 @@
 # GitHub Actions Workflow for Android Build
-# Flutter Android APK and AAB build with automatic tagging and release
+# Flutter Android APK and AAB build with automatic semantic versioning and release
 
 name: Android Build and Release
 
@@ -16,11 +16,15 @@ on:
       - develop
   workflow_dispatch:
     inputs:
-      create_tag:
-        description: 'Create new tag and release'
+      version_bump:
+        description: 'Version bump type'
         required: false
-        type: boolean
-        default: false
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
+        default: patch
 
 jobs:
   test:
@@ -53,6 +57,126 @@ jobs:
 
       - name: Run Flutter test
         run: flutter test
+
+  bump-version:
+    name: Bump Version and Create Tag
+    runs-on: ubuntu-latest
+    needs: test
+    if: |
+      github.ref == 'refs/heads/main' && 
+      github.event_name == 'push' && 
+      !startsWith(github.event.head_commit.message, 'chore(release):')
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup Git
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+
+      - name: Get current version
+        id: current_version
+        run: |
+          VERSION=$(grep '^version:' pubspec.yaml | sed 's/version: //' | tr -d ' ')
+          VERSION_NUMBER=$(echo $VERSION | cut -d'+' -f1)
+          BUILD_NUMBER=$(echo $VERSION | cut -d'+' -f2)
+          echo "current_version=$VERSION" >> $GITHUB_OUTPUT
+          echo "version_number=$VERSION_NUMBER" >> $GITHUB_OUTPUT
+          echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
+          echo "Current version: $VERSION"
+
+      - name: Get last tag
+        id: last_tag
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          echo "last_tag=$LAST_TAG" >> $GITHUB_OUTPUT
+          echo "Last tag: $LAST_TAG"
+
+      - name: Determine version bump type
+        id: bump_type
+        run: |
+          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+            BUMP_TYPE="${{ github.event.inputs.version_bump }}"
+          else
+            # Auto-increment patch version for main branch pushes
+            BUMP_TYPE="patch"
+          fi
+          echo "bump_type=$BUMP_TYPE" >> $GITHUB_OUTPUT
+          echo "Bump type: $BUMP_TYPE"
+
+      - name: Calculate new version
+        id: new_version
+        run: |
+          CURRENT_VERSION="${{ steps.current_version.outputs.version_number }}"
+          BUILD_NUMBER="${{ steps.current_version.outputs.build_number }}"
+          BUMP_TYPE="${{ steps.bump_type.outputs.bump_type }}"
+          
+          IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
+          MAJOR=${VERSION_PARTS[0]}
+          MINOR=${VERSION_PARTS[1]}
+          PATCH=${VERSION_PARTS[2]}
+          
+          case "$BUMP_TYPE" in
+            major)
+              MAJOR=$((MAJOR + 1))
+              MINOR=0
+              PATCH=0
+              ;;
+            minor)
+              MINOR=$((MINOR + 1))
+              PATCH=0
+              ;;
+            patch)
+              PATCH=$((PATCH + 1))
+              ;;
+          esac
+          
+          NEW_VERSION="$MAJOR.$MINOR.$PATCH"
+          NEW_BUILD_NUMBER=$((BUILD_NUMBER + 1))
+          NEW_FULL_VERSION="${NEW_VERSION}+${NEW_BUILD_NUMBER}"
+          
+          echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "new_build_number=$NEW_BUILD_NUMBER" >> $GITHUB_OUTPUT
+          echo "new_full_version=$NEW_FULL_VERSION" >> $GITHUB_OUTPUT
+          echo "New version: $NEW_FULL_VERSION"
+
+      - name: Update pubspec.yaml
+        run: |
+          NEW_VERSION="${{ steps.new_version.outputs.new_full_version }}"
+          if [[ "$OSTYPE" == "darwin"* ]]; then
+            sed -i '' "s/^version:.*/version: $NEW_VERSION/" pubspec.yaml
+          else
+            sed -i "s/^version:.*/version: $NEW_VERSION/" pubspec.yaml
+          fi
+          echo "Updated pubspec.yaml to version: $NEW_VERSION"
+
+      - name: Commit version bump
+        run: |
+          NEW_VERSION="${{ steps.new_version.outputs.new_full_version }}"
+          git add pubspec.yaml
+          git commit -m "chore(release): bump version to $NEW_VERSION" || exit 0
+          git push origin main
+
+      - name: Create and push tag
+        run: |
+          NEW_VERSION="${{ steps.new_version.outputs.new_version }}"
+          TAG_NAME="v$NEW_VERSION"
+          git tag -a "$TAG_NAME" -m "Release $TAG_NAME - Azure DevOps OnPrem Mobile App"
+          git push origin "$TAG_NAME"
+          echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
+          echo "Tag $TAG_NAME created and pushed"
+
+      - name: Set outputs
+        id: outputs
+        run: |
+          echo "tag_name=v${{ steps.new_version.outputs.new_version }}" >> $GITHUB_OUTPUT
+          echo "version=${{ steps.new_version.outputs.new_full_version }}" >> $GITHUB_OUTPUT
 
   build-apk:
     name: Build APK
@@ -99,7 +223,9 @@ jobs:
     name: Build AAB
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.create_tag == 'true'))
+    if: |
+      (github.ref == 'refs/heads/main' && github.event_name != 'pull_request') ||
+      startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -130,12 +256,12 @@ jobs:
           path: build/app/outputs/bundle/release/app-release.aab
           retention-days: 30
 
-  create-tag-and-release:
-    name: Create Tag and Release
+  create-release:
+    name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build-apk, build-aab]
+    needs: [build-apk, build-aab, bump-version]
     if: |
-      (github.ref == 'refs/heads/main' && (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.create_tag == 'true'))) ||
+      (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
       startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: write
@@ -144,22 +270,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Git
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-
-      - name: Get version from pubspec.yaml
-        id: version
-        run: |
-          VERSION=$(grep '^version:' pubspec.yaml | sed 's/version: //' | tr -d ' ')
-          VERSION_NUMBER=$(echo $VERSION | cut -d'+' -f1)
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "version_number=$VERSION_NUMBER" >> $GITHUB_OUTPUT
-          echo "Version: $VERSION"
-          echo "Version Number: $VERSION_NUMBER"
 
       - name: Determine tag name
         id: tag
@@ -167,36 +277,19 @@ jobs:
           if startsWith(github.ref, 'refs/tags/v'); then
             TAG_NAME=${GITHUB_REF#refs/tags/}
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-            echo "existing_tag=true" >> $GITHUB_OUTPUT
-            echo "Using existing tag: $TAG_NAME"
           else
-            VERSION_NUMBER="${{ steps.version.outputs.version_number }}"
-            TAG_NAME="v$VERSION_NUMBER"
+            # Get tag from bump-version job
+            TAG_NAME="${{ needs.bump-version.outputs.tag_name }}"
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-            echo "existing_tag=false" >> $GITHUB_OUTPUT
-            echo "Creating new tag: $TAG_NAME"
           fi
+          echo "Using tag: $TAG_NAME"
 
-      - name: Check if tag exists
-        id: check_tag
-        if: steps.tag.outputs.existing_tag == 'false'
+      - name: Get version from pubspec.yaml
+        id: version
         run: |
-          TAG_NAME="${{ steps.tag.outputs.tag_name }}"
-          if git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Tag $TAG_NAME already exists"
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Tag $TAG_NAME does not exist"
-          fi
-
-      - name: Create and push tag
-        if: steps.tag.outputs.existing_tag == 'false' && steps.check_tag.outputs.exists == 'false'
-        run: |
-          TAG_NAME="${{ steps.tag.outputs.tag_name }}"
-          git tag -a "$TAG_NAME" -m "Release $TAG_NAME - Azure DevOps OnPrem Mobile App"
-          git push origin "$TAG_NAME"
-          echo "Tag $TAG_NAME created and pushed"
+          VERSION=$(grep '^version:' pubspec.yaml | sed 's/version: //' | tr -d ' ')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Version: $VERSION"
 
       - name: Download APK artifact
         uses: actions/download-artifact@v4
@@ -227,17 +320,16 @@ jobs:
         run: |
           TAG_NAME="${{ steps.tag.outputs.tag_name }}"
           VERSION="${{ steps.version.outputs.version }}"
-          COMMIT_MSG=$(git log -1 --pretty=%B)
-          COMMIT_AUTHOR=$(git log -1 --pretty=%an)
-          COMMIT_DATE=$(git log -1 --pretty=%cd --date=format:'%Y-%m-%d %H:%M:%S UTC')
           
           # Get changelog from commits since last tag
-          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          LAST_TAG=$(git describe --tags --abbrev=0 HEAD~1 2>/dev/null || echo "")
           if [ -n "$LAST_TAG" ]; then
-            CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%an)" | head -20)
+            CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:"- %s (%an)" | head -30)
           else
-            CHANGELOG=$(git log --pretty=format:"- %s (%an)" -10)
+            CHANGELOG=$(git log --pretty=format:"- %s (%an)" -20)
           fi
+          
+          COMMIT_COUNT=$(git rev-list --count ${LAST_TAG}..HEAD 2>/dev/null || git rev-list --count HEAD)
           
           NOTES="## 🚀 Azure DevOps OnPrem Mobile App - $TAG_NAME
           
@@ -255,33 +347,18 @@ jobs:
           - **Flutter Version**: 3.24.0
           - **Build Date**: $(date -u +'%Y-%m-%d %H:%M:%S UTC')
           - **Commit**: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
-          - **Commit Author**: $COMMIT_AUTHOR
-          - **Commit Date**: $COMMIT_DATE
+          - **Commits in this release**: $COMMIT_COUNT
           
-          ### 📝 Recent Changes
+          ### 📝 Changes ($COMMIT_COUNT commits)
           $CHANGELOG
           
           ### 📋 Full Changelog
-          See [commit history](https://github.com/${{ github.repository }}/compare/$LAST_TAG...$TAG_NAME) for detailed changes."
+          See [commit history](https://github.com/${{ github.repository }}/compare/${LAST_TAG}...$TAG_NAME) for detailed changes."
           
           echo "$NOTES" > release-notes.md
           echo "Release notes generated"
 
-      - name: Check if release exists
-        id: check_release
-        run: |
-          TAG_NAME="${{ steps.tag.outputs.tag_name }}"
-          if gh release view "$TAG_NAME" >/dev/null 2>&1; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Release $TAG_NAME already exists"
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-            echo "Release $TAG_NAME does not exist"
-          fi
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create or Update GitHub Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.tag.outputs.tag_name }}
@@ -332,7 +409,7 @@ jobs:
   deploy-production:
     name: Deploy Production
     runs-on: ubuntu-latest
-    needs: [build-aab, create-tag-and-release]
+    needs: [build-aab, create-release]
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     environment:
       name: production
