refactor: Change package name from io.purplesoft.azuredevops_onprem to io.rdc.azuredevops
- Update Android package name in build.gradle.kts
- Update Android MainActivity package and directory structure
- Update iOS bundle identifier in project.pbxproj
- Update Fastlane Appfile
- Update all documentation files
- Update scripts with new package name

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -415,7 +415,7 @@ jobs:
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
     environment:
       name: production
-      url: https://play.google.com/store/apps/details?id=io.purplesoft.azuredevops_onprem
+      url: https://play.google.com/store/apps/details?id=io.rdc.azuredevops
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
