--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,8 @@ app.*.map.json
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
 **/ios/Runner/GeneratedPluginRegistrant.*
+**/ios/build/
+**/ios/*.xcarchive/
 
 # Android
 **/android/**/gradle-wrapper.jar
