--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -407,6 +407,15 @@ jobs:
           
           echo "$NOTES" > release-notes.md
           echo "Release notes generated"
+          
+      - name: Use RELEASE_NOTES.md if available
+        run: |
+          if [ -f "release-assets/RELEASE_NOTES.md" ]; then
+            echo "Using RELEASE_NOTES.md for release body"
+            cp release-assets/RELEASE_NOTES.md release-notes.md
+          else
+            echo "Using generated release notes"
+          fi
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
