--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -52,6 +52,17 @@ jobs:
       - name: Run Flutter test
         run: flutter test
 
+      - name: Security Scan
+        run: |
+          echo "🔒 Running security scan..."
+          chmod +x scripts/security_scan.sh
+          ./scripts/security_scan.sh || true
+          
+      - name: Check for outdated dependencies
+        run: |
+          echo "📦 Checking for outdated packages..."
+          flutter pub outdated || true
+
   bump-version:
     name: Bump Version and Create Tag
     runs-on: ubuntu-latest
