feat: Add comprehensive security steps to all CI/CD pipelines
- Add dependency update check step to all pipelines
- Add comprehensive security audit combining dependency and OWASP reports
- Include dependency update reports in releases
- Add security recommendations to audit reports

Security steps added:
1. ✅ Update outdated dependencies to latest versions
2. ✅ Regular security audits and dependency updates
3. 📝 Certificate pinning, root/jailbreak detection, token refresh, security logging (code changes needed)

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -373,6 +373,8 @@ jobs:
             release-assets/sbom.txt
             release-assets/security_report.md
             release-assets/security_audit.md
+            release-assets/security/comprehensive_audit.md
+            release-assets/dependencies/dependency_update_report.md
           draft: false
           prerelease: false
           make_latest: false
