fix: Resolve security service method calls and add to all pipelines
- Fix SecurityService.logSecurityEvent method visibility
- Fix SecurityService.logAuthentication parameter usage
- Add security checks to all CI/CD pipelines (GitHub, GitLab, Jenkins)
- Update comprehensive audit to include implementation status

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,6 +84,8 @@ test:security:
     - echo "🔒 Running security scan..."
     - chmod +x scripts/security_scan.sh
     - ./scripts/security_scan.sh || true
+    - chmod +x scripts/security_checks.sh
+    - ./scripts/security_checks.sh || true
     - echo "📦 Checking for outdated packages..."
     - flutter pub outdated || true
   only:
