--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -70,17 +70,19 @@ pipeline {
                         sh 'flutter test'
                     }
                 }
-                stage('Security Scan') {
-                    steps {
-                        sh '''
-                            echo "🔒 Running security scan..."
-                            chmod +x scripts/security_scan.sh
-                            ./scripts/security_scan.sh || true
-                            echo "📦 Checking for outdated packages..."
-                            flutter pub outdated || true
-                        '''
+                    stage('Security Scan') {
+                        steps {
+                            sh '''
+                                echo "🔒 Running security scan..."
+                                chmod +x scripts/security_scan.sh
+                                ./scripts/security_scan.sh || true
+                                chmod +x scripts/security_checks.sh
+                                ./scripts/security_checks.sh || true
+                                echo "📦 Checking for outdated packages..."
+                                flutter pub outdated || true
+                            '''
+                        }
                     }
-                }
             }
         }
         
