feat: Complete certificate pinning setup and fix root/jailbreak detection
- Add certificate fingerprint extraction script
- Add certificate pinning setup documentation
- Improve certificate pinning service with better error handling
- Fix flutter_root_jailbreak_checker method calls with fallback logic
- Enable certificate pinning in all CI/CD pipelines (PRODUCTION=true)
- Add comprehensive certificate pinning configuration guide

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -223,7 +223,7 @@ jobs:
           ./scripts/generate_sbom.sh || true
 
       - name: Build APK
-        run: flutter build apk --release
+        run: flutter build apk --release --dart-define=PRODUCTION=true
 
       - name: Rename APK to azuredevops.apk
         run: |
