--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -99,7 +99,7 @@ pipeline {
                     echo "📋 Generating SBOM..."
                     chmod +x scripts/generate_sbom.sh
                     ./scripts/generate_sbom.sh || true
-                    flutter build apk --release
+                    flutter build apk --release --dart-define=PRODUCTION=true
                     mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/azuredevops.apk || true
                 '''
                 archiveArtifacts artifacts: 'build/app/outputs/flutter-apk/azuredevops.apk', fingerprint: true
