--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -254,7 +254,7 @@ jobs:
 
       - name: Build AAB
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-        run: flutter build appbundle --release
+        run: flutter build appbundle --release --dart-define=PRODUCTION=true
 
       - name: Rename APK
         run: |
@@ -304,7 +304,7 @@ jobs:
           pod install
 
       - name: Build iOS IPA
-        run: flutter build ipa --release
+        run: flutter build ipa --release --dart-define=PRODUCTION=true
 
       - name: Prepare IPA artifact
         run: |
