--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -198,12 +198,13 @@ jobs:
   bump-version:
     name: Bump Version and Create Tag
     runs-on: ubuntu-latest
-    needs: [test, code-coverage, security-scan]
+    needs: [test]
     if: |
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push' && 
       !contains(github.event.head_commit.message, 'chore(release):') &&
-      !contains(github.event.head_commit.message, '[skip version]')
+      !contains(github.event.head_commit.message, '[skip version]') &&
+      !contains(github.event.head_commit.message, '[skip ci]')
     permissions:
       contents: write
     steps:
@@ -307,7 +308,7 @@ jobs:
   build-android:
     name: Build Android
     runs-on: ubuntu-latest
-    needs: [test, code-coverage, security-scan, bump-version]
+    needs: [test, code-coverage, security-scan]
     if: |
       always() && (
         (github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v'))) ||
@@ -418,7 +419,10 @@ jobs:
     name: Update Documentation
     runs-on: ubuntu-latest
     needs: build-android
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: |
+      always() && 
+      github.ref == 'refs/heads/main' && 
+      github.event_name == 'push'
     permissions:
       contents: write
     steps:
@@ -470,10 +474,12 @@ jobs:
   create-release:
     name: Create GitHub Release (Android)
     runs-on: ubuntu-latest
-    needs: [build-android, update-documentation]
+    needs: [build-android]
     if: |
-      (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
-      startsWith(github.ref, 'refs/tags/v')
+      always() && (
+        (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
+        startsWith(github.ref, 'refs/tags/v')
+      )
     permissions:
       contents: write
     steps:
@@ -488,7 +494,7 @@ jobs:
           if startsWith(github.ref, 'refs/tags/v'); then
             TAG_NAME=${GITHUB_REF#refs/tags/}
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-          elif [ -n "${{ needs.bump-version.outputs.tag_name }}" ]; then
+          elif [ -n "${{ needs.bump-version.outputs.tag_name }}" ] && [ "${{ needs.bump-version.result }}" == "success" ]; then
             TAG_NAME="${{ needs.bump-version.outputs.tag_name }}"
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
           else
