--- a/.github/workflows/ios-pipeline.yml
+++ b/.github/workflows/ios-pipeline.yml
@@ -192,12 +192,13 @@ jobs:
   bump-version:
     name: Bump Version and Create Tag
     runs-on: macos-latest
-    needs: [test, code-coverage, security-scan]
+    needs: [test]
     if: |
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push' && 
       !contains(github.event.head_commit.message, 'chore(release):') &&
-      !contains(github.event.head_commit.message, '[skip version]')
+      !contains(github.event.head_commit.message, '[skip version]') &&
+      !contains(github.event.head_commit.message, '[skip ci]')
     permissions:
       contents: write
     steps:
@@ -301,7 +302,7 @@ jobs:
   build-ios:
     name: Build iOS
     runs-on: macos-latest
-    needs: [test, code-coverage, security-scan, bump-version]
+    needs: [test, code-coverage, security-scan]
     if: |
       always() && (
         (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) ||
@@ -399,7 +400,10 @@ jobs:
     name: Update Documentation
     runs-on: macos-latest
     needs: build-ios
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: |
+      always() && 
+      github.ref == 'refs/heads/main' && 
+      github.event_name == 'push'
     permissions:
       contents: write
     steps:
@@ -450,10 +454,12 @@ jobs:
   create-release:
     name: Create GitHub Release (iOS)
     runs-on: ubuntu-latest
-    needs: [build-ios, update-documentation]
+    needs: [build-ios]
     if: |
-      (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
-      startsWith(github.ref, 'refs/tags/v')
+      always() && (
+        (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
+        startsWith(github.ref, 'refs/tags/v')
+      )
     permissions:
       contents: write
     steps:
@@ -468,7 +474,7 @@ jobs:
           if startsWith(github.ref, 'refs/tags/v'); then
             TAG_NAME=${GITHUB_REF#refs/tags/}
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-          elif [ -n "${{ needs.bump-version.outputs.tag_name }}" ]; then
+          elif [ -n "${{ needs.bump-version.outputs.tag_name }}" ] && [ "${{ needs.bump-version.result }}" == "success" ]; then
             TAG_NAME="${{ needs.bump-version.outputs.tag_name }}"
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
           else
