--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -200,6 +200,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test]
     if: |
+      always() &&
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push' && 
       !contains(github.event.head_commit.message, 'chore(release):') &&
