--- a/.github/workflows/ios-pipeline.yml
+++ b/.github/workflows/ios-pipeline.yml
@@ -194,6 +194,7 @@ jobs:
     runs-on: macos-latest
     needs: [test]
     if: |
+      always() &&
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push' && 
       !contains(github.event.head_commit.message, 'chore(release):') &&
