--- a/.github/workflows/ios-pipeline.yml
+++ b/.github/workflows/ios-pipeline.yml
@@ -202,6 +202,7 @@ jobs:
       !contains(github.event.head_commit.message, '[skip ci]')
     permissions:
       contents: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -362,18 +363,35 @@ jobs:
         continue-on-error: true
         run: |
           echo "📦 Installing cosign..."
-          brew install cosign || echo "⚠️  Cosign installation failed"
+          COSIGN_VERSION=$(curl -s https://api.github.com/repos/sigstore/cosign/releases/latest | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+          wget -O /tmp/cosign "https://github.com/sigstore/cosign/releases/download/${COSIGN_VERSION}/cosign-darwin-amd64" || \
+          wget -O /tmp/cosign https://github.com/sigstore/cosign/releases/latest/download/cosign-darwin-amd64 || \
+          echo "⚠️  Cosign download failed"
+          if [ -f /tmp/cosign ]; then
+            chmod +x /tmp/cosign
+            sudo mv /tmp/cosign /usr/local/bin/cosign || mv /tmp/cosign /usr/local/bin/cosign || echo "⚠️  Cosign install failed"
+            cosign version || echo "⚠️  Cosign version check failed"
+          fi
 
       - name: Sign IPA with Sigstore
         if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
         continue-on-error: true
+        permissions:
+          id-token: write
+          contents: read
         run: |
           echo "🔐 Signing IPA with Sigstore..."
           if command -v cosign &> /dev/null; then
             chmod +x scripts/sign_artifact.sh || true
-            # Use OIDC for authentication (non-interactive)
+            # Use OIDC for authentication in GitHub Actions
             export COSIGN_EXPERIMENTAL=1
-            ./scripts/sign_artifact.sh "release-assets/ios/azuredevops-${{ steps.version.outputs.version_number }}.ipa" || echo "⚠️  Sigstore signing skipped (authentication required)"
+            export COSIGN_OIDC_ISSUER=https://token.actions.githubusercontent.com
+            # Try OIDC first, fallback to manual if needed
+            cosign sign-blob \
+              --bundle "release-assets/ios/azuredevops-${{ steps.version.outputs.version_number }}.ipa.sigstore" \
+              --oidc-issuer https://token.actions.githubusercontent.com \
+              "release-assets/ios/azuredevops-${{ steps.version.outputs.version_number }}.ipa" || \
+            echo "⚠️  Sigstore signing skipped (OIDC authentication failed)"
           else
             echo "⚠️  cosign not installed. Sigstore signing will be skipped."
           fi
