fix: Fix Android build and test issues
- Fix root_detector namespace issue in Android build
- Add timeout to Flutter tests (30s per test, 5min total)
- Fix Codecov upload with token support (skip if no token)
- Simplify widget test to avoid timeout
- Add namespace fix in android/build.gradle.kts

--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -103,8 +103,9 @@ jobs:
 
       - name: Run Flutter test
         continue-on-error: true
+        timeout-minutes: 5
         run: |
-          flutter test --coverage || echo "⚠️  Tests failed, continuing..."
+          flutter test --coverage --timeout=30s || echo "⚠️  Tests failed, continuing..."
 
       - name: Upload test results
         if: always()
@@ -151,6 +152,12 @@ jobs:
           flags: android
           name: android-coverage
           fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
+          # If token is not set, skip upload
+          skip: ${{ !secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
+          # Skip if no token (tokenless upload requires public repo)
+          skip: ${{ !secrets.CODECOV_TOKEN }}
 
       - name: Upload coverage artifact
         if: always()
