--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -520,7 +520,7 @@ jobs:
       - name: Determine tag name
         id: tag
         run: |
-          if startsWith(github.ref, 'refs/tags/v'); then
+          if [[ "$GITHUB_REF" == refs/tags/v* ]]; then
             TAG_NAME=${GITHUB_REF#refs/tags/}
             echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
           elif [ -n "${{ needs.bump-version.outputs.tag_name }}" ] && [ "${{ needs.bump-version.result }}" == "success" ]; then
