--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -315,10 +315,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, code-coverage, security-scan]
     if: |
-      always() && (
-        (github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v'))) ||
-        (github.event_name == 'workflow_dispatch')
-      )
+      (github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v'))) ||
+      (github.event_name == 'workflow_dispatch')
     permissions:
       contents: read
       id-token: write
@@ -446,7 +444,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-android
     if: |
-      always() && 
+      success() && 
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push'
     permissions:
@@ -502,7 +500,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-android]
     if: |
-      always() && (
+      success() && (
         (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
         startsWith(github.ref, 'refs/tags/v')
       )
