--- a/.github/workflows/ios-pipeline.yml
+++ b/.github/workflows/ios-pipeline.yml
@@ -316,10 +316,8 @@ jobs:
     runs-on: alpay-mac
     needs: [test, code-coverage, security-scan]
     if: |
-      always() && (
-        (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')) ||
-        (github.event_name == 'workflow_dispatch')
-      )
+      (github.event_name != 'pull_request' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/v'))) ||
+      (github.event_name == 'workflow_dispatch')
     permissions:
       contents: read
       id-token: write
@@ -431,7 +429,7 @@ jobs:
     runs-on: alpay-mac
     needs: build-ios
     if: |
-      always() && 
+      success() && 
       github.ref == 'refs/heads/main' && 
       github.event_name == 'push'
     permissions:
@@ -486,7 +484,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-ios]
     if: |
-      always() && (
+      success() && (
         (github.ref == 'refs/heads/main' && github.event_name == 'push') ||
         startsWith(github.ref, 'refs/tags/v')
       )
