feat: Configure PR-only pipeline execution and branch protection
- Update PR triggers to only run on main branch PRs
- Add PR types: opened, synchronize, reopened
- Enable build jobs for PR events
- Configure branch protection to require pipeline success before merge

--- a/.github/workflows/android-pipeline.yml
+++ b/.github/workflows/android-pipeline.yml
@@ -18,11 +18,12 @@ on:
   pull_request:
     branches:
       - main
-      - develop
     paths:
       - 'lib/**'
       - 'android/**'
       - 'pubspec.yaml'
+      - '.github/workflows/android-pipeline.yml'
+    types: [opened, synchronize, reopened]
   workflow_dispatch:
     inputs:
       version_bump:
