--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   # İçerik render etme
   flutter_html: ^3.0.0-beta.2
   flutter_markdown: ^0.6.23  # Markdown rendering için
+  html: ^0.15.4  # HTML parsing için (Market Service)
   logging: ^1.3.0
   
   # Güvenlik
