--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@
 # Geliştirici: Alpay Bilgiç
 # Bu uygulama Azure DevOps Server 2022 on-premise kurulumları için mobil erişim sağlar
 name: azuredevops_onprem
-description: "Azure DevOps Server 2022 Mobile App"
+description: "Azure DevOps Mobile App"
 version: 1.2.0+84
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
